--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <link rel="stylesheet" href="style.css">
 
-  <title>Hello, world!</title>
+  <title>Propuesta portoalegre</title>
 </head>
 
 <body>
