--- a/index.html
+++ b/index.html
@@ -98,10 +98,13 @@
 
   <div class="text-center" id="empresa">
     <h1 class=" texto-p text-white display-3 text-shadow-dark mb-3 bg-dark"
-      style="font-size: 40px; margin: 10px ; background-color: black;">Centro comercial Portoalegre
-      “Propuesta de Sistema de iluminación perimetral
-      inteligente RGB”</h1>
+      style="font-size: 40px; margin: 10px ; background-color: black;">
+     ¿Quíenes Somos?</h1>
   </div>
+
+
+
+
 
   <div class=" row p-5 " style="margin: 0;" style="background-color: rgba(0, 0, 0, 0.384);">
     <div class="col-md-6 ">
@@ -169,31 +172,60 @@
       </div>
     </div>
 
+  </div> -->
+
+
+
+
+
+
+<!-- Nosotros -->
+
+
+  <div class="w-100">
+    <a href="recursos/1x/3g.png" class="image-link">
+      <img src="recursos/1x/3g.png" alt="Imagen 1" class="w-100">
+    </a>
   </div>
 
+<!-- Nosotros -->
 
 
-
-
-  <div id="proyectos"class="row" style="margin-bottom: 20px;">
+  <div id="proyectos"class="row my-5" >
 
     <div class="col-md-4">
 
 
+      <div class="card bg-dark" style="width:100%;">
+        <a href="gifs/duitama.gif" class="image-link ">
+          <img src="gifs/duitama.gif" alt="Imagen 1 " class="w-100">
+        </a>
+  
+        <div class="card-body">
+          <p class="card-text text-light ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
 
-      <a href="recursos/1x/6.png" class="image-link">
-        <img src="recursos/1x/6.png" alt="Imagen 1 " class="w-100">
-      </a>
 
+
+   
 
     </div>
 
     <div class="col-md-4">
 
 
-      <a href="recursos/1x/3g.png" class="image-link">
-        <img src="recursos/1x/3.png" alt="Imagen 1" class="w-100">
-      </a>
+   
+      <div class="card bg-dark" style="width:100%;">
+        <a href="gifs/tunja.gif" class="image-link ">
+          <img src="gifs/tunja.gif" alt="Imagen 1 " class="w-100">
+        </a>
+  
+        <div class="card-body">
+          <p class="card-text text-light ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+
 
 
     </div>
@@ -202,9 +234,16 @@
     <div class="col-md-4">
 
 
-      <a href="recursos/1x/4g.png" class="image-link">
-        <img src="recursos/1x/4.png" alt="Imagen 1" class="w-100">
-      </a>
+      <div class="card bg-dark" style="width:100%;">
+        <a href="gifs/torre.gif" class="image-link ">
+          <img src="gifs/torre.gif" alt="Imagen 1 " class="w-100">
+        </a>
+  
+        <div class="card-body">
+          <p class="card-text text-light ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+
 
 
     </div>
@@ -220,9 +259,16 @@
     <div class="col-md-4">
 
 
-      <a href="recursos/1x/7.png" class="image-link">
-        <img src="recursos/1x/7.png" alt="Imagen 1 " class="w-100">
-      </a>
+      <div class="card bg-dark" style="width:100%;">
+        <a href="gifs/UCM.gif" class="image-link ">
+          <img src="gifs/UCM.gif" alt="Imagen 1 " class="w-100">
+        </a>
+  
+        <div class="card-body">
+          <p class="card-text text-light ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+
 
     </div>
 
@@ -230,21 +276,101 @@
     <div class="col-md-4">
 
 
-      <a href="recursos/1x/8.png" class="image-link">
-        <img src="recursos/1x/8.png" alt="Imagen 1" class="w-100">
-      </a>
+      <div class="card bg-dark" style="width:100%;">
+        <a href="gifs/monserrate.gif" class="image-link ">
+          <img src="gifs/monserrate.gif" alt="Imagen 1 " class="w-100">
+        </a>
+  
+        <div class="card-body">
+          <p class="card-text text-light ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+
     </div>
 
     <div class="col-md-4">
 
 
-      <a href="recursos/1x/13.png" class="image-link">
-        <img src="recursos/1x/13.png" alt="Imagen 1" class="w-100">
-      </a>
+      <div class="card bg-dark" style="width:100%;">
+        <a href="gifs/mediatica.gif" class="image-link ">
+          <img src="gifs/mediatica.gif" alt="Imagen 1 " class="w-100">
+        </a>
+  
+        <div class="card-body">
+          <p class="card-text text-light ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
 
     </div>
 
   </div>
+
+
+
+
+
+<!-- Carrousel Bootstrap -->
+
+<div id="carouselExampleControls" class="carousel slide " data-ride="carousel" style="width: 80%; margin: 0 auto;">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="gifs/duitama.gif" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>gfdggfdffgfg</h5>
+        <p>dfgdfggfdfdfg</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="gifs/mediatica.gif" alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>gfdggfdffgfg</h5>
+        <p>dfgdfggfdfdfg</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="gifs/monserrate.gif" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>gfdggfdffgfg</h5>
+        <p>dfgdfggfdfdfg</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="gifs/torre.gif" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>gfdggfdffgfg</h5>
+        <p>dfgdfggfdfdfg</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="gifs/tunja.gif" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>gfdggfdffgfg</h5>
+        <p>dfgdfggfdfdfg</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="gifs/UCM.gif" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>gfdggfdffgfg</h5>
+        <p>dfgdfggfdfdfg</p>
+      </div>
+    </div>
+
+
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<!-- Carrousel Bootstrap -->
+
+
 
 
 
@@ -459,6 +585,9 @@
 
 
   <!-- Content -->
+
+
+  
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
