--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
 
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
-      <img src="logo.png" width="200px" height="10%" class="d-inline-block align-top" alt="Logo">
-
+    <a class="navbar-brand" href="https://www.colorledsiluminacion.com/" target="_blank">
+    <img src="logo.png" width="200px" height="10%" class="d-inline-block align-top" alt="Logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
