--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 
 
-  <div class=" row p-5 " style="margin: 0;" style="background-color: rgba(0, 0, 0, 0.384);">
+<!--   <div class=" row p-5 " style="margin: 0;" style="background-color: rgba(0, 0, 0, 0.384);">
     <div class="col-md-6 ">
       <div id="carouselExampleIndicators" class="carousel slide mx-auto bg-dark" data-ride="carousel" style=" width: 100%;
     height: 10%;">
@@ -171,7 +171,7 @@
       </div>
     </div>
 
-  </div> -->
+  </div> --> -->
 
 
 
@@ -189,6 +189,11 @@
 
 <!-- Nosotros -->
 
+<div class="text-center" id="empresa">
+  <h1 class=" texto-p text-white display-3 text-shadow-dark mb-3 bg-dark"
+    style="font-size: 40px; margin: 10px ; background-color: black;">
+  Algunas de nuestras experiencias</h1>
+</div>
 
   <div id="proyectos"class="row my-5" >
 
@@ -310,7 +315,7 @@
 
 <!-- Carrousel Bootstrap -->
 
-<div id="carouselExampleControls" class="carousel slide " data-ride="carousel" style="width: 80%; margin: 0 auto;">
+<!-- <div id="carouselExampleControls" class="carousel slide " data-ride="carousel" style="width: 80%; margin: 0 auto;">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="gifs/duitama.gif" alt="First slide">
@@ -365,7 +370,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
+</div> -->
 
 <!-- Carrousel Bootstrap -->
 
