--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 
   <div class="w-100">
-    <a href="recursos/1x/3g.png" class="image-link">
+    <a href="recursos/1x/3g.png" class="">
       <img src="recursos/1x/3g.png" alt="Imagen 1" class="w-100">
     </a>
   </div>
