--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
         </a>
   
         <div class="card-body">
-          <p class="card-text text-light ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text text-light ">Fachada Alcaldía Duitama 2013</p>
+          <p class="card-text text-light " style="margin:-2% 0;">Boyacá Colombia</p>
         </div>
       </div>
 
@@ -225,7 +226,8 @@
         </a>
   
         <div class="card-body">
-          <p class="card-text text-light ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text text-light ">Fachada Alcaldía  Tunja 2016 </p>
+          <p class="card-text text-light " style="margin:-2% 0;">Boyacá Colombia</p>
         </div>
       </div>
 
@@ -243,7 +245,8 @@
         </a>
   
         <div class="card-body">
-          <p class="card-text text-light ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text text-light ">Torre del Cable 2022</p>
+          <p class="card-text text-light   " style="margin:-2% 0;"  >Manizales - Colombia</p>
         </div>
       </div>
 
@@ -268,7 +271,8 @@
         </a>
   
         <div class="card-body">
-          <p class="card-text text-light ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text text-light ">Obelisco Universidad Católica 2017</p>
+          <p class="card-text text-light " style="margin:-2% 0;">Manizales - Colombia</p>
         </div>
       </div>
 
@@ -285,7 +289,8 @@
         </a>
   
         <div class="card-body">
-          <p class="card-text text-light ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text text-light ">Santurario Monserrate 2018</p>
+          <p class="card-text text-light " style="margin:-2% 0;">Bogotá - Colombia</p>
         </div>
       </div>
 
@@ -300,7 +305,8 @@
         </a>
   
         <div class="card-body">
-          <p class="card-text text-light ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text text-light ">Fachada Edificio administrativo Cafam 2014</p>
+          <p class="card-text text-light " style="margin:-2% 0;">Bogotá - Colombia</p>
         </div>
       </div>
 
