--- a/index.html
+++ b/index.html
@@ -199,22 +199,50 @@
     <div class="col-md-4">
 
 
+
       <div class="card bg-dark" style="width:100%;">
-        <a href="gifs/duitama.gif" class="image-link ">
-          <img src="gifs/duitama.gif" alt="Imagen 1 " class="w-100">
+        <a href="gifs/torre.gif" class="image-link ">
+          <img src="gifs/torre.gif" alt="Imagen 1 " class="w-100">
         </a>
   
         <div class="card-body">
-          <p class="card-text text-light ">Fachada Alcaldía Duitama 2013</p>
-          <p class="card-text text-light " style="margin:-2% 0;">Boyacá Colombia</p>
+          <p class="card-text text-light ">Torre del Cable 2022</p>
+          <p class="card-text text-light   " style="margin:-2% 0;"  >Manizales - Colombia</p>
         </div>
       </div>
 
+
+   
 
 
    
 
     </div>
+
+    <div class="col-md-4">
+
+      <div class="card bg-dark" style="width:100%;">
+        <a href="gifs/UCM.gif" class="image-link ">
+          <img src="gifs/UCM.gif" alt="Imagen 1 " class="w-100">
+        </a>
+  
+        <div class="card-body">
+          <p class="card-text text-light ">Obelisco Universidad Católica 2017</p>
+          <p class="card-text text-light " style="margin:-2% 0;">Manizales - Colombia</p>
+        </div>
+      </div>
+
+
+
+
+
+   
+  
+
+
+
+    </div>
+
 
     <div class="col-md-4">
 
@@ -236,25 +264,6 @@
     </div>
 
 
-    <div class="col-md-4">
-
-
-      <div class="card bg-dark" style="width:100%;">
-        <a href="gifs/torre.gif" class="image-link ">
-          <img src="gifs/torre.gif" alt="Imagen 1 " class="w-100">
-        </a>
-  
-        <div class="card-body">
-          <p class="card-text text-light ">Torre del Cable 2022</p>
-          <p class="card-text text-light   " style="margin:-2% 0;"  >Manizales - Colombia</p>
-        </div>
-      </div>
-
-
-
-    </div>
-
-
   </div>
 
 
@@ -264,23 +273,6 @@
 
     <div class="col-md-4">
 
-
-      <div class="card bg-dark" style="width:100%;">
-        <a href="gifs/UCM.gif" class="image-link ">
-          <img src="gifs/UCM.gif" alt="Imagen 1 " class="w-100">
-        </a>
-  
-        <div class="card-body">
-          <p class="card-text text-light ">Obelisco Universidad Católica 2017</p>
-          <p class="card-text text-light " style="margin:-2% 0;">Manizales - Colombia</p>
-        </div>
-      </div>
-
-
-    </div>
-
-
-    <div class="col-md-4">
 
 
       <div class="card bg-dark" style="width:100%;">
@@ -294,14 +286,22 @@
         </div>
       </div>
 
+
+
+
+
+   
+
+
     </div>
+
 
     <div class="col-md-4">
 
 
       <div class="card bg-dark" style="width:100%;">
-        <a href="gifs/mediatica.gif" class="image-link ">
-          <img src="gifs/mediatica.gif" alt="Imagen 1 " class="w-100">
+        <a href="gifs/cafam.gif" class="image-link ">
+          <img src="gifs/cafam.gif" alt="Imagen 1 " class="w-100">
         </a>
   
         <div class="card-body">
@@ -309,6 +309,26 @@
           <p class="card-text text-light " style="margin:-2% 0;">Bogotá - Colombia</p>
         </div>
       </div>
+
+
+
+
+    </div>
+
+    <div class="col-md-4">
+
+      <div class="card bg-dark" style="width:100%;">
+        <a href="gifs/duitama.gif" class="image-link ">
+          <img src="gifs/duitama.gif" alt="Imagen 1 " class="w-100">
+        </a>
+  
+        <div class="card-body">
+          <p class="card-text text-light ">Fachada Alcaldía Duitama 2013</p>
+          <p class="card-text text-light " style="margin:-2% 0;">Boyacá Colombia</p>
+        </div>
+      </div>
+
+    
 
     </div>
 
