--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="https://www.colorledsiluminacion.com/" target="_blank">
     <img src="logo.png" width="200px" height="10%" class="d-inline-block align-top" alt="Logo">
     </a>
@@ -96,8 +96,8 @@
   <!-- Content -->
 
   <div class="text-center" id="empresa">
-    <h1 class=" texto-p text-white display-3 text-shadow-dark mb-3 bg-dark"
-      style="font-size: 40px; margin: 10px ; background-color: black;">
+    <h1 class=" texto-p text-white display-3 text-shadow-dark mb-3 bg-primary"
+      style="font-size: 40px; margin:20px 0px ; background-color: black; height:50px;">
      ¿Quíenes Somos?</h1>
   </div>
 
@@ -188,8 +188,8 @@
 
 <!-- Nosotros -->
 
-<div class="text-center" id="empresa">
-  <h1 class=" texto-p text-white display-3 text-shadow-dark mb-3 bg-dark"
+<div class="text-center " id="empresa" >
+  <h1 class=" texto-p text-white display-3 text-shadow-dark mb-3 bg-primary "
     style="font-size: 40px; margin: 10px ; background-color: black;">
   Algunas de nuestras experiencias</h1>
 </div>
@@ -227,7 +227,7 @@
         </a>
   
         <div class="card-body">
-          <p class="card-text text-light ">Obelisco Universidad Católica 2017</p>
+          <p class="card-text text-light bg ">Obelisco Universidad Católica 2017</p>
           <p class="card-text text-light " style="margin:-2% 0;">Manizales - Colombia</p>
         </div>
       </div>
